--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Video Timestamp Demo</title>
 </head>
   <body>
-    <script src="js/index.js"></script>
-    <video id="video-display">
+    <script src="js/index.js" defer></script>
+    <video autoplay playsinline id="video-display">
   </body>
 </html>
