--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 </head>
   <body>
     <script src="js/index.js" defer></script>
-    <video autoplay playsinline id="video-display">
+    <div>
+      <video autoplay playsinline id="video-sender"></video>
+      <video autoplay playsinline id="video-receiver"></video>
+    </div>
+    <div>
+      <button id="start-button">Start</button>
+      <button id-="call-button">Call</button>
+    </div>
   </body>
 </html>
