init local stream

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div>
       <button id="start-button">Start</button>
-      <button id-="call-button">Call</button>
+      <button id="call-button" disabled>Call</button>
     </div>
   </body>
 </html>
