update file serving

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Video Timestamp Demo</title>
 </head>
   <body>
-    <script src="js/index.js" defer></script>
+    <script src="index.js" defer></script>
     <div>
       <video autoplay playsinline id="video-sender"></video>
       <video autoplay playsinline id="video-receiver"></video>
