add descriptions and display timestamps

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
       <button id="start-button">Start</button>
       <button id="call-button" disabled>Call</button>
+      <div id="timestamp-display"></div>
     </div>
   </body>
 </html>
